<resources>
    <string name="app_name">GoSkate</string>
    <string name="title_home">Inicio</string>
    <string name="title_dashboard">parches</string>
    <string name="title_galery"></string>
    <string name="title_skateshop">SkateShop</string>
    <string name="title_post_rider">Rider</string>
    <string name="title_post_truco">Truco</string>
    <string name="title_post_spot">Spot</string>
    <string name="title_password">Password...</string>
    <string name="title_registro">REGISTRARSE</string>
    <string name="title_email">EMAIL</string>
    <string name="title_ingresar">Ingresar</string>
    <string name="title_ingresar_con">Ingresar con</string>
    <string name="no_user_count">¿Aun no tienes una cuenta?</string>
    <string name="title_salir">Salir</string>
    <string name="title_activity_maps">Map</string>
    <string name="shop_pisanlof">PIS AN LOF</string>
    <string name="shop_descrption">Tienda de Skate donde encuentras Maderos,
        Rodamientos, Medias,Ropa y mucho mas ...</string>
    <string name="shop_direc_pisanlof"> CC Colombia Linda Carrera 7 # 23-49</string>
    <string name="go_skate_bogota">GoSkate Bogota</string>
    <string name="skate_shop">Skate Shop</string>
    <string name="date_post">Has been update a post</string>
    <string name="date_datepost">Date</string>
    <string name="time_post">Time</string>

</resources>
