<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_margin="10dp"
                android:id="@+id/logo_post"
                android:src="@drawable/logo"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/appname"
                android:layout_gravity="center_vertical"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/app_name" />

        </LinearLayout>

        <ImageView
            android:id="@+id/post_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/description"
            android:layout_gravity="center_vertical"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/title_post_spot"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/description1"
            android:layout_gravity="center_vertical"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/title_post_rider" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/description2"
            android:layout_gravity="center_vertical"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/title_post_truco" />


    </LinearLayout>


</RelativeLayout>