<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/amarillo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:padding="5dp"
        android:orientation="horizontal">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:padding="5dp"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/post_logo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@string/app_name"
            android:scaleType="fitCenter"
            android:src="@drawable/logoingre"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input"
                android:text="@string/title_post_rider"
                android:textAlignment="center"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="8dp"
                android:textColor="@color/colorPrimaryDark" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="5dp"
                android:padding="2dp">

                <TextView
                android:id="@+id/update"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_post"
                android:textSize="13dp"/>
                <TextView
                    android:id="@+id/post_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date_datepost"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="13dp"/>

                <TextView
                    android:id="@+id/post_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time_post"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="13dp"/>

            </LinearLayout>

        </LinearLayout>

        </LinearLayout>

        <TextView
                   android:id="@+id/description1"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginLeft="3dp"
                   android:layout_marginRight="3dp"
                   android:textSize="14dp"/>
        <TextView
                   android:id="@+id/description2"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginLeft="3dp"
                   android:layout_marginRight="3dp"/>

    </LinearLayout>
</RelativeLayout>