<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ingresofondi"
    tools:context=".loginActivity">

    <ImageView
        android:id="@+id/login_icon"
        android:layout_width="206dp"
        android:layout_height="142dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="88dp"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/logoingre" />

    <RelativeLayout
        android:layout_width="346dp"
        android:layout_height="270dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="19dp"
        android:layout_marginBottom="109dp"
        android:background="@drawable/amarillo">

        <EditText
            android:id="@+id/email_login"
            android:layout_width="280dp"
            android:layout_height="37dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="35dp"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="31dp"
            android:autofillHints="email"
            android:background="@drawable/input"
            android:hint="@string/title_email"
            android:inputType="textEmailAddress"
            android:text="@string/title_email"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            tools:targetApi="o" />


        <EditText
            android:id="@+id/password_login"
            android:layout_width="280dp"
            android:layout_height="38dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="35dp"
            android:layout_marginEnd="31dp"
            android:layout_marginBottom="167dp"
            android:autofillHints="Password"
            android:background="@drawable/input"
            android:hint="@string/title_password"
            android:inputType="textPassword"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            tools:targetApi="o" />

        <Button
            android:id="@+id/ingresar_login"
            android:layout_width="190dp"
            android:layout_height="56dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="95dp"
            android:layout_marginEnd="99dp"
            android:layout_marginBottom="86dp"
            android:background="@drawable/ingresar"
            android:textColor="@color/common_google_signin_btn_text_dark_pressed" />

        <TextView
            android:id="@+id/user_nocount"
            android:layout_width="wrap_content"
            android:layout_height="31dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="76dp"
            android:layout_marginEnd="73dp"
            android:layout_marginBottom="31dp"
            android:background="@drawable/inputyet"
            android:contentDescription="@string/no_user_count"
            android:text="@string/no_user_count"
            android:textAlignment="center"
            android:textColor="@color/common_google_signin_btn_text_dark_default" />
    </RelativeLayout>

</RelativeLayout>